Fix/compile runtime warnings (#14)
* First pass warnings fix

* Groovy inspection warnings pass

* JVM languages inspection warnings pass

* Mixin inspection warnings pass

* Java inspection warnings first pass

* Java inspection warnings second pass

* Java inspection warnings third pass

* Java redundant declarations warnings first pass

* Java redundant declarations warnings second pass

* Java redundant declarations warnings third pass

* Java redundant declarations warnings fourth pass

* Bump version to 0.2.1